2011-01-04  Jeff Miller  <jeffm@apple.com>

Reviewed by Darin Adler.

        Member variable and method naming cleanup to be consistent with WebKit2.
        https://bugs.webkit.org/show_bug.cgi?id=51228

        * page/win/EventHandlerWin.cpp:
        (WebCore::EventHandler::eventActivatedView):
        Rename activatedWebView() to didActivateWebView().

        * platform/PlatformMouseEvent.h:
        Rename m_activatedWebView to m_didActivateWebView.

        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        Initialize platform-specific member variables in PlatformMouseEvent constructors.

        (WebCore::PlatformMouseEvent::didActivateWebView):
        Rename activatedWebView() to didActivateWebView().

        * platform/win/PlatformMouseEventWin.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        Rename m_activatedWebView to m_didActivateWebView.
2011-01-04  Jeff Miller  <jeffm@apple.com>

        Reviewed by Darin Adler.

        Mouse events in WebKit2 on Windows need to know whether the click activated the WebView to match WebKit1 behavior.
        https://bugs.webkit.org/show_bug.cgi?id=51228

        * Shared/WebEvent.h:
        (WebKit::WebMouseEvent::didActivateWebView):
        Add m_didActivateWebView to WebMouseEvent on Windows.

        * Shared/WebEventConversion.cpp:
        (WebKit::WebKit2PlatformMouseEvent::WebKit2PlatformMouseEvent):
        Propagate whether the click activated the WebView when converting to a PlatformMouseEvent.

        * Shared/WebMouseEvent.cpp:
        (WebKit::WebMouseEvent::WebMouseEvent):
        Add m_didActivateWebView to WebMouseEvent on Windows.

        (WebKit::WebMouseEvent::encode):
        (WebKit::WebMouseEvent::decode):
        Encode and decode new m_didActivateWebView member variable.

        * Shared/win/WebEventFactory.cpp:
        (WebKit::WebEventFactory::createWebMouseEvent):
        * Shared/win/WebEventFactory.h:
        Add didActivateWebView parameter to createWebMouseEvent().

        * UIProcess/win/WebView.cpp:
        (WebKit::WebView::wndProc):
        (WebKit::WebView::WebView):
        (WebKit::WebView::onMouseEvent):
        * UIProcess/win/WebView.h:
        (WebKit::WebView::setWasActivatedByMouseEvent):
        Keep track of whether the click activated the WebView.

Canonical link: https://commits.webkit.org/65365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75040 268f45cc-cd09-0410-ab3c-d52691b4dbfc