WebCore/platform/win/PlatformMouseEventWin.cpp
@@ -77,7 +77,7 @@ static MouseEventType messageToEventType(UINT message)
             return MouseEventMoved;
     }
 }
-PlatformMouseEvent::PlatformMouseEvent(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam, bool activatedWebView)
+PlatformMouseEvent::PlatformMouseEvent(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam, bool didActivateWebView)
     : m_position(positionForEvent(hWnd, lParam))
     , m_globalPosition(globalPositionForEvent(hWnd, lParam))
     , m_clickCount(0)
@@ -85,7 +85,7 @@ PlatformMouseEvent::PlatformMouseEvent(HWND hWnd, UINT message, WPARAM wParam, L
     , m_ctrlKey(wParam & MK_CONTROL)
     , m_altKey(GetKeyState(VK_MENU) & HIGH_BIT_MASK_SHORT)
     , m_metaKey(m_altKey) // FIXME: We'll have to test other browsers
-    , m_activatedWebView(activatedWebView)
+    , m_didActivateWebView(didActivateWebView)
     , m_eventType(messageToEventType(message))
     , m_modifierFlags(wParam)
 {
