WebKit2/Shared/WebEventConversion.cpp
@@ -83,6 +83,10 @@ public:
             m_modifierFlags |= WebEvent::AltKey;
         if (m_metaKey)
             m_modifierFlags |= WebEvent::MetaKey;
+
+#if PLATFORM(WIN)
+        m_didActivateWebView = webEvent.didActivateWebView();
+#endif
     }
 };
 
