WebKit2/Shared/WebMouseEvent.cpp
@@ -41,15 +41,39 @@ WebMouseEvent::WebMouseEvent(Type type, Button button, const IntPoint& position,
     , m_deltaY(deltaY)
     , m_deltaZ(deltaZ)
     , m_clickCount(clickCount)
+#if PLATFORM(WIN)
+    , m_didActivateWebView(false)
+#endif
 {
     ASSERT(isMouseEventType(type));
 }
+
+#if PLATFORM(WIN)
+WebMouseEvent::WebMouseEvent(Type type, Button button, const IntPoint& position, const IntPoint& globalPosition, float deltaX, float deltaY, float deltaZ, int clickCount, Modifiers modifiers, double timestamp, bool didActivateWebView)
+    : WebEvent(type, modifiers, timestamp)
+    , m_button(button)
+    , m_position(position)
+    , m_globalPosition(globalPosition)
+    , m_deltaX(deltaX)
+    , m_deltaY(deltaY)
+    , m_deltaZ(deltaZ)
+    , m_clickCount(clickCount)
+    , m_didActivateWebView(didActivateWebView)
+{
+    ASSERT(isMouseEventType(type));
+}
+#endif
 
 void WebMouseEvent::encode(CoreIPC::ArgumentEncoder* encoder) const
 {
     WebEvent::encode(encoder);
 
+#if PLATFORM(WIN)
+    // Include m_didActivateWebView on Windows.
+    encoder->encode(CoreIPC::In(m_button, m_position, m_globalPosition, m_deltaX, m_deltaY, m_deltaZ, m_clickCount, m_didActivateWebView));
+#else
     encoder->encode(CoreIPC::In(m_button, m_position, m_globalPosition, m_deltaX, m_deltaY, m_deltaZ, m_clickCount));
+#endif
 }
 
 bool WebMouseEvent::decode(CoreIPC::ArgumentDecoder* decoder, WebMouseEvent& t)
@@ -57,7 +81,12 @@ bool WebMouseEvent::decode(CoreIPC::ArgumentDecoder* decoder, WebMouseEvent& t)
     if (!WebEvent::decode(decoder, t))
         return false;
 
+#if PLATFORM(WIN)
+    // Include m_didActivateWebView on Windows.
+    return decoder->decode(CoreIPC::Out(t.m_button, t.m_position, t.m_globalPosition, t.m_deltaX, t.m_deltaY, t.m_deltaZ, t.m_clickCount, t.m_didActivateWebView));
+#else
     return decoder->decode(CoreIPC::Out(t.m_button, t.m_position, t.m_globalPosition, t.m_deltaX, t.m_deltaY, t.m_deltaZ, t.m_clickCount));
+#endif
 }
 
 bool WebMouseEvent::isMouseEventType(Type type)
